# autonomous-data-engineering-agent

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
config/: phase1.yaml  phase2.yaml  phase3.yaml  phase4.yaml
docs/: ARCHITECTURE.md  PRD.md  PRODUCTION.md
docs/tutorials/: 01-getting-started.md  02-module1-synthetic-data.md  03-module2-genprm-training.md  04-module3-mcts-inference.md  05-module4-rl-training.md  06-end-to-end-pipeline.md  README.md
scripts/: publish_pypi.py  run_pipeline.py  setup_benchmarks.py
scripts/phase1/: generate_cocte_dataset.py
src/genprm/: __init__.py
src/genprm/common/: __init__.py  backends.py  config.py  llm_client.py  schemas.py
src/genprm/phase1/: __init__.py  cli.py
src/genprm/phase1/cocte/: decomposer.py  formatter.py  prompts.py
src/genprm/phase1/dataset/: benchmarks.py  builder.py  diversity.py  loader.py  schema_extractor.py
src/genprm/phase1/labeling/: execution_labeler.py  llm_labeler.py  mcts_estimator.py
src/genprm/phase1/sandbox/: executor.py  isolator.py
src/genprm/phase1/trajectory/: generator.py
src/genprm/phase2/: __init__.py  cli.py
src/genprm/phase2/data/: prm_dataset.py
src/genprm/phase2/inference/: genprm.py
src/genprm/phase2/labeling/: rpe.py
src/genprm/phase2/prompts/: prm_template.py
src/genprm/phase2/training/: __init__.py  hf_trainer.py  hf_utils.py
src/genprm/phase3/: __init__.py  cli.py  engine.py
src/genprm/phase3/mcts/: early_exit.py  search_tree.py  value_fn.py
src/genprm/phase3/scheduling/: adaptive_boost.py
src/genprm/phase4/: __init__.py  cli.py
src/genprm/phase4/credit/: pure_min_form.py
src/genprm/phase4/rl/: execution_gate.py  recode_grpo.py
src/genprm/phase4/trainer/: grpo_trainer.py
src/genprm/phase4/training/: __init__.py  hf_policy_trainer.py
tests/: conftest.py  test_common.py  test_coverage_gaps.py  test_final_coverage.py  test_phase1.py  test_phase2.py  test_phase3.py  test_phase4.py  test_production.py
