[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "genprm"
version = "0.1.0"
description = "Autonomous Data Agent with GenPRM, MCTS, and RL. Synthesis of GenPRM, RewardSQL, ReST-MCTS, and PURE"
readme = "README.md"
license = "Apache-2.0"
license-files = ["LICENSE"]
requires-python = ">=3.10"
authors = [{ name = "Autonomous-Data-Agent-GenPRM Contributors" }]
keywords = [
    "genprm",
    "text-to-sql",
    "mcts",
    "process-reward-model",
    "cocte",
    "reinforcement-learning",
    "sql",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Database",
]
dependencies = [
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "pyyaml>=6.0",
    "sqlparse>=0.5.0",
    "sqlglot>=25.0.0",
    "tqdm>=4.66",
]

[project.urls]
Homepage = "https://github.com/vaquarkhan/autonomous-data-engineering-agent"
Documentation = "https://github.com/vaquarkhan/autonomous-data-engineering-agent#readme"
Repository = "https://github.com/vaquarkhan/autonomous-data-engineering-agent"
Issues = "https://github.com/vaquarkhan/autonomous-data-engineering-agent/issues"

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-cov>=5.0", "ruff>=0.4", "openai>=1.0"]
llm = ["openai>=1.0", "httpx>=0.27"]

[project.scripts]
genprm-generate-cocte = "genprm.phase1.cli:main"
genprm-train-genprm = "genprm.phase2.cli:main"
genprm-mcts-infer = "genprm.phase3.cli:main"
genprm-train-rl = "genprm.phase4.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=genprm --cov-report=term-missing --cov-fail-under=100"

[tool.coverage.run]
branch = false
source = ["genprm"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
]
